Remove includeViews option from QueryGrid.getFilterStatusValues. View titles are in the panel title and no longer included with the filter pills. Updated FilterStatusValue to only have filters. Added methods to return text of filter pills from grid. Updated expectation of clicking 'Save' button if in a view. Added more tests to validate saving and editing grid view behavior.